CSS file: fixed StackOverflow bug

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -187,7 +187,7 @@ img{
 	height: 55px;
 }
 
-#connect_images_1 {
+img#connect_images_1 {
 	width: 50px;
 	height: 50px;
 }
